# surrogate_toolkit

./: .gitignore  CMakeLists.txt  OneStopInstall.sh  README.md  download_deps.sh  farm_guide.md  install.sh  install_deps.sh
cmake/: FindJulia.cmake
containers/: CMakeLists.txt  Dockerfile
docker/: Dockerfile  Makefile
docs/: Colin-Wolfe-WriteUp.md  bare_metal_build.md  (+14 more)
examples/: CMakeLists.txt
examples/2d_diffusion_before/: CMakeLists.txt  main.cpp
examples/calorimeter/: CMakeLists.txt
examples/calorimeter/B4a/: CMakeLists.txt
examples/calorimeter/B4a/include/: EventAction.hh
examples/calorimeter/B4a/src/: EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
examples/calorimeter/B4d/: CMakeLists.txt  exampleB4d.cc  profile_b4d.sh.in  run1.mac  run_b4d.mac
examples/calorimeter/B4d/include/: EventAction.hh  PhasmEmPhysics.hh  PhasmProcess.hh
examples/calorimeter/B4d/src/: EventAction.cc  PhasmEmPhysics.cc  PhasmProcess.cc  PrimaryGeneratorAction.cc  RunAction.cc
examples/calorimeter/surrogate/: root_to_npy.py  single_track_fits.py  torch_cvae.py
examples/diffusion_pde_solver/: CMakeLists.txt  diffusion_pde_solver.cpp
examples/loading_pt/: CMakeLists.txt  loading_pt.cpp
examples/magnetic_field_map/: CMakeLists.txt  DMagneticFieldMap.h  DMagneticFieldMapFineMesh.cc  DMagneticFieldMapFineMesh.h  DVector3.h  HDEVIO.cc  JCalibrationGenerator_TestFixture.cpp  JCalibrationGenerator_TestFixture.hpp  JCalibration_TestFixture.cpp  README.md  TorchScriptModelBuilder.ipynb  magnetic_field_map.cpp  main.cpp  requirements.txt  torch_mlp.py  train_model.py  validate_model.ipynb  validate_model.py
examples/magnetic_field_map/halld_recon/: DMagneticFieldMap.h  DMagneticFieldMapFineMesh.cc  DMagneticFieldMapFineMesh.h  HDEVIO.cc  JCalibrationGenerator_TestFixture.cpp  JCalibration_TestFixture.hpp  TVector3.h
examples/magnetic_field_map_before/: CMakeLists.txt  main.cpp
examples/memtrace/: CMakeLists.txt  vacuum_target.cpp
examples/mfield_surrogate_mlp/: train_mfield_surrogate.py  validate_model.ipynb
examples/mlflow_rest/: CMakeLists.txt  mlflow_rest.cpp
examples/mlflow_rest/demo_mlflow_host/: MLProject  README.md  README.rst  demo_mlflow.py  mfield_mlp_mlflow.py
examples/mlflow_rest/demo_mlp/: cmp.diff  seg_fault.py
examples/pde_solver/: CMakeLists.txt  diffusion_pde_solver.cpp  pytorch_diffusion_pde_solver.cpp
examples/pinn_pde_solver/: CMakeLists.txt  pinn_diffusion_pde_solver.cpp
examples/tracking/: CMakeLists.txt
examples/tracking_before/: CMakeLists.txt  main.cpp
examples/tutorial/: CMakeLists.txt  pytorch_tutorial.cpp  tutorial.cpp
julia_plugin/: CMakeLists.txt
julia_plugin/include/: julia_model.h  julia_modelvars.h
julia_plugin/julia/: Phasm.jl  TestModel.jl
julia_plugin/src/: Phasm.jl  julia_model.cc  julia_modelvars.cc  julia_plugin_main.cc
julia_plugin/test/: OddModel.jl  ScalarModel.jl  TypedModel.jl  inc.jl  julia_tests.cc
memtrace/src/: CMakeLists.txt  dwarf_utils.cpp  interpreter.cpp  memtrace_backend.cpp
memtrace/test/: CMakeLists.txt  dummy_tests.cpp  interpreter_tests.cpp
memtrace_pin/: CMakeLists.txt  README.md  makefile.rules  memtrace_pin.in  memtrace_pin_frontend.cpp  typename.hpp
mvdt/: CMakeLists.txt
mvdt/include/: AnalysisResult.h
mvdt/src/: AnalysisResult.cpp  SimpleStreamChecker.cpp  main.cpp
mvdt/test/: div0.cc
mvdt_static/: CMakeLists.txt
rest_plugin/: CMakeLists.txt
rest_plugin/include/: mlflow_client.h
rest_plugin/src/: mlflow_client.cpp
surrogate/: CMakeLists.txt
surrogate/include/: any_ptr.hpp  call_site_variable.h  feedforward_model.h  flamegraph.hpp  model.h  model_variable.h  omnitensor.hpp  optics.h  plugin.h  plugin_loader.h  range.h  sampler.h  surrogate.h  surrogate_builder.h  tensor.hpp  torchscript_model.h
surrogate/src/: feedforward_model.cpp  flamegraph.cpp  model.cpp  omnitensor.cpp  plugin_loader.cc  surrogate.cpp  surrogate_builder.cpp  tensor.cpp
surrogate/test/: capturing_tests.cpp  experiments.h  flamegraph_tests.cpp  fluent_experiments.cpp  fluent_tests.cpp  memorizing_tests.cpp  omnitensor_tests.cpp  optics_oop_tests.cpp  optics_tests.cpp  plugin_tests.cc  prism_tests.cpp  pytorch_model_tests.cpp  pytorch_tests.cpp  range_tests.cc  range_tests.cpp  sampling_tests.cpp  tutorial_tests.cpp  visitor_tests.cpp
surrogate_library/: CMakeLists.txt
surrogate_library/include/: any_ptr.hpp  binding.h  binding_visitor.h  call_site_variable.h  candidate.h  experiments.h  feedforward_model.h  fluent.h  model.h  model_variable.h  optics.h  parameter.h  parameter_range.h  pytorch_model.h  range.h  sampler.h  surrogate.h  surrogate_builder.h  table.h  tensor.hpp  torchscript_model.h
surrogate_library/src/: feedforward_model.cpp  fluent.cpp  model.cpp  range.cpp  surrogate.cpp  surrogate_builder.cpp  tensor.cpp  torchscript_model.cpp
surrogate_library/test/: basic_capturing_tests.cpp  basic_sampling_tests.cpp  candidate_tests.cpp  capturing_tests.cpp  dummy_tests.cpp  experiment_tests.cpp  experiments.h  fluent_experiments.cpp  fluent_tests.cpp  memorizing_tests.cpp  optics_tests.cpp  prism_tests.cpp  pytorch_model_tests.cpp  pytorch_tests.cpp  range_tests.cc  range_tests.cpp  sampling_tests.cpp  tutorial_tests.cpp  visitor_tests.cpp
torch_plugin/: CMakeLists.txt
torch_plugin/include/: feedforward_model.h  torch_cuda_utils.h  torch_tensor_utils.h  torch_utils.h  torchscript_model.h
torch_plugin/src/: feedforward_model.cpp  torch_cuda_utils.cc  torch_plugin_main.cc  torch_tensor_utils.cc  torch_utils.cc  torchscript_model.cpp
torch_plugin/test/: pytorch_model_tests.cpp  pytorch_tests.cpp  torchscript_model_tests.cpp
vacuum_tool/: CMakeLists.txt
vacuum_tool/src/: README.md  dwarf_example.cpp  dwarf_model.hpp  dwarf_utils.cpp  dwarf_utils.hpp  interpreter.cpp  interpreter.hpp  main.cpp  makefile.rules  pinatrace.cpp  utils.hpp  vacuum.cpp  vacuum.hpp  vacuum_backend.cpp  vacuum_interpreter.cpp  vacuum_interpreter.hpp  vacuum_pin_plugin.cpp  vacuum_target.cpp  vacuum_tool.cpp  vacuum_tool.in
vacuum_tool/test/: dummy_tests.cpp  interpreter_tests.cpp
(+74 files in other folders)
